k8s-app/podinfo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9898
      protocol: TCP
      name: http
  selector:
    app: podinfo
